--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,17 @@
 *.zip
 *.tar.gz
 *.rar
+libs/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# IntelliJ
+*.iml
+.idea
+
+# VSCode
+.DS_Store
+
+# Java
+target/
